--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   font-family: sans-serif;
-  background-color: #222;
+  background-color: white;
   color: white;
   display: block;
 }
