--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .App {
   text-align: center;
   font-family: sans-serif;
-  background-color: white;
+  background: rgb(238,174,174);
+  background: linear-gradient(168deg, rgba(238,174,174,1) 0%, rgba(40,74,115,1) 100%);
   color: black;
   display: block;
 }
