--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
-.App {
+body, html {
   text-align: center;
   font-family: sans-serif;
   background: rgb(238,174,174);
   background: linear-gradient(168deg, rgba(238,174,174,1) 0%, rgba(40,74,115,1) 100%);
   color: black;
   display: block;
+  overflow: auto;
 }
 
 .App-logo {
